--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ tgcrypto
 py-tgcalls
 python-dotenv
 youtube-search-python
+youtube-search
 https://github.com/PyrogramMod/PyrogramMod/archive/refs/heads/main.zip
